@@ -164,6 +164,7 @@
 * Pin Payments: Add support for Apple and Google payment method types [naashton] #5462
 * Pin Payments: Scrub sensitive data from transcript [naashton] #5473
 * CheckoutV2: Send payment type as Regular instead of unscheduled if initiator is cardholder [adarsh-spreedly] #5471
+* CommerceHub: Pass order_id for Verify [almalee24] #5475
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
